--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sanity": "^3.99.0",
+    "sonner": "^2.0.6",
     "stripe": "^18.3.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
