--- a/package.json
+++ b/package.json
@@ -12,21 +12,24 @@
   "dependencies": {
     "@clerk/nextjs": "^6.25.4",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.99.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "debounce": "^2.2.0",
     "framer-motion": "^12.0.0-alpha.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "next-sanity": "^9.12.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-toastify": "^11.0.5",
     "sanity": "^3.99.0",
-    "sonner": "^2.0.6",
     "stripe": "^18.3.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
@@ -36,6 +39,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
